Fix scrollbar reappearing when using the touchpad (only on Wayland)

On Wayland, sometimes the scrollbar reappears on the left side of the
screen even when the scrollbar is set to 'hidden'.

- This happens when scrolling twice using the touchpad.
- This only happens on Wayland
- This only happens with Qt 5.14 or newer

This patch is a workaround for a change in Qt 5.14. Due "scroll phases",
scrollbars get set to visible when starting to scroll, and don't hide
themselves afterwards.

BUG: 415508
FIXED-IN: 20.08

https://invent.kde.org/utilities/konsole/-/merge_requests/127